[package]
name = "fiender"
version = "0.1.0"
authors = ["manghi <manghirs@gmail.com>"]
edition = "2018"
description = "A CLI tool to retreive DnD5e spells and monsters stats, written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
serde_json = "1.0"

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.tokio]
version = "0.2"
features = ["full"]